// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Components > IconButton > should match snapshot when disabled 1`] = `
<button
  class="bg-primary hover:bg-primary-hover active:bg-primary-press disabled:bg-primary-disabled text-white rounded-lg text-sm p-1 text-center inline-flex items-center mr-2
        undefined
      "
  disabled=""
>
  <pixiv-icon
    name="24/Menu"
    scale="1"
  />
</button>
`;

exports[`Button Components > IconButton > should match snapshot when processing 1`] = `
<button
  class="bg-primary hover:bg-primary-hover active:bg-primary-press disabled:bg-primary-disabled text-white rounded-lg text-sm p-1 text-center inline-flex items-center mr-2
        undefined
      "
>
  <pixiv-icon
    name="24/Dot"
    scale="1"
  />
</button>
`;

exports[`Button Components > IconButton > should match snapshot with custom className 1`] = `
<button
  class="bg-primary hover:bg-primary-hover active:bg-primary-press disabled:bg-primary-disabled text-white rounded-lg text-sm p-1 text-center inline-flex items-center mr-2
        custom-class
      "
>
  <pixiv-icon
    name="24/Settings"
    scale="1"
  />
</button>
`;

exports[`Button Components > IconButton > should match snapshot with default props 1`] = `
<button
  class="bg-primary hover:bg-primary-hover active:bg-primary-press disabled:bg-primary-disabled text-white rounded-lg text-sm p-1 text-center inline-flex items-center mr-2
        undefined
      "
>
  <pixiv-icon
    name="24/Menu"
    scale="1"
  />
</button>
`;

exports[`Button Components > IconButton > should match snapshot with label 1`] = `
<button
  class="bg-primary hover:bg-primary-hover active:bg-primary-press disabled:bg-primary-disabled text-white rounded-lg text-sm p-1 text-center inline-flex items-center mr-2
        undefined
      "
>
  <pixiv-icon
    name="24/Menu"
    scale="1"
  />
  <div
    class="mx-2 font-bold"
  >
    Click Me
  </div>
</button>
`;

exports[`Button Components > IconButton > should match snapshot with processing and label 1`] = `
<button
  class="bg-primary hover:bg-primary-hover active:bg-primary-press disabled:bg-primary-disabled text-white rounded-lg text-sm p-1 text-center inline-flex items-center mr-2
        undefined
      "
>
  <pixiv-icon
    name="24/Dot"
    scale="1"
  />
  <div
    class="mx-2 font-bold"
  >
    Sending
  </div>
</button>
`;

exports[`Button Components > TextButton > should match snapshot when disabled 1`] = `
<button
  class="px-3 py-1.5 text-white text-xs font-semibold bg-slate-800 hover:bg-slate-700 active:bg-slate-900 disabled:bg-slate-400 rounded transition-all cursor-pointer undefined"
  disabled=""
>
  Disabled Button
</button>
`;

exports[`Button Components > TextButton > should match snapshot with custom className 1`] = `
<button
  class="px-3 py-1.5 text-white text-xs font-semibold bg-slate-800 hover:bg-slate-700 active:bg-slate-900 disabled:bg-slate-400 rounded transition-all cursor-pointer my-custom-class"
>
  Custom Button
</button>
`;

exports[`Button Components > TextButton > should match snapshot with long text 1`] = `
<button
  class="px-3 py-1.5 text-white text-xs font-semibold bg-slate-800 hover:bg-slate-700 active:bg-slate-900 disabled:bg-slate-400 rounded transition-all cursor-pointer undefined"
>
  This is a very long button text that might wrap
</button>
`;

exports[`Button Components > TextButton > should match snapshot with onClick handler 1`] = `
<button
  class="px-3 py-1.5 text-white text-xs font-semibold bg-slate-800 hover:bg-slate-700 active:bg-slate-900 disabled:bg-slate-400 rounded transition-all cursor-pointer undefined"
>
  Submit
</button>
`;

exports[`Button Components > TextButton > should match snapshot with text 1`] = `
<button
  class="px-3 py-1.5 text-white text-xs font-semibold bg-slate-800 hover:bg-slate-700 active:bg-slate-900 disabled:bg-slate-400 rounded transition-all cursor-pointer undefined"
>
  Click Me
</button>
`;

exports[`Button Components > TextButton > should match snapshot with type submit 1`] = `
<button
  class="px-3 py-1.5 text-white text-xs font-semibold bg-slate-800 hover:bg-slate-700 active:bg-slate-900 disabled:bg-slate-400 rounded transition-all cursor-pointer undefined"
  type="submit"
>
  Submit Form
</button>
`;

exports[`Button Components IconButton should match snapshot when disabled 1`] = `
<button
  class="bg-primary hover:bg-primary-hover active:bg-primary-press disabled:bg-primary-disabled text-white rounded-lg text-sm p-1 text-center inline-flex items-center mr-2
        undefined
      "
  disabled=""
>
  <pixiv-icon
    name="24/Menu"
    scale="1"
  />
</button>
`;

exports[`Button Components IconButton should match snapshot when processing 1`] = `
<button
  class="bg-primary hover:bg-primary-hover active:bg-primary-press disabled:bg-primary-disabled text-white rounded-lg text-sm p-1 text-center inline-flex items-center mr-2
        undefined
      "
>
  <pixiv-icon
    name="24/Dot"
    scale="1"
  />
</button>
`;

exports[`Button Components IconButton should match snapshot with custom className 1`] = `
<button
  class="bg-primary hover:bg-primary-hover active:bg-primary-press disabled:bg-primary-disabled text-white rounded-lg text-sm p-1 text-center inline-flex items-center mr-2
        custom-class
      "
>
  <pixiv-icon
    name="24/Settings"
    scale="1"
  />
</button>
`;

exports[`Button Components IconButton should match snapshot with default props 1`] = `
<button
  class="bg-primary hover:bg-primary-hover active:bg-primary-press disabled:bg-primary-disabled text-white rounded-lg text-sm p-1 text-center inline-flex items-center mr-2
        undefined
      "
>
  <pixiv-icon
    name="24/Menu"
    scale="1"
  />
</button>
`;

exports[`Button Components IconButton should match snapshot with label 1`] = `
<button
  class="bg-primary hover:bg-primary-hover active:bg-primary-press disabled:bg-primary-disabled text-white rounded-lg text-sm p-1 text-center inline-flex items-center mr-2
        undefined
      "
>
  <pixiv-icon
    name="24/Menu"
    scale="1"
  />
  <div
    class="mx-2 font-bold"
  >
    Click Me
  </div>
</button>
`;

exports[`Button Components IconButton should match snapshot with processing and label 1`] = `
<button
  class="bg-primary hover:bg-primary-hover active:bg-primary-press disabled:bg-primary-disabled text-white rounded-lg text-sm p-1 text-center inline-flex items-center mr-2
        undefined
      "
>
  <pixiv-icon
    name="24/Dot"
    scale="1"
  />
  <div
    class="mx-2 font-bold"
  >
    Sending
  </div>
</button>
`;

exports[`Button Components TextButton should match snapshot when disabled 1`] = `
<button
  class="px-3 py-1.5 text-white text-xs font-semibold bg-slate-800 hover:bg-slate-700 active:bg-slate-900 disabled:bg-slate-400 rounded transition-all cursor-pointer undefined"
  disabled=""
>
  Disabled Button
</button>
`;

exports[`Button Components TextButton should match snapshot with custom className 1`] = `
<button
  class="px-3 py-1.5 text-white text-xs font-semibold bg-slate-800 hover:bg-slate-700 active:bg-slate-900 disabled:bg-slate-400 rounded transition-all cursor-pointer my-custom-class"
>
  Custom Button
</button>
`;

exports[`Button Components TextButton should match snapshot with long text 1`] = `
<button
  class="px-3 py-1.5 text-white text-xs font-semibold bg-slate-800 hover:bg-slate-700 active:bg-slate-900 disabled:bg-slate-400 rounded transition-all cursor-pointer undefined"
>
  This is a very long button text that might wrap
</button>
`;

exports[`Button Components TextButton should match snapshot with onClick handler 1`] = `
<button
  class="px-3 py-1.5 text-white text-xs font-semibold bg-slate-800 hover:bg-slate-700 active:bg-slate-900 disabled:bg-slate-400 rounded transition-all cursor-pointer undefined"
>
  Submit
</button>
`;

exports[`Button Components TextButton should match snapshot with text 1`] = `
<button
  class="px-3 py-1.5 text-white text-xs font-semibold bg-slate-800 hover:bg-slate-700 active:bg-slate-900 disabled:bg-slate-400 rounded transition-all cursor-pointer undefined"
>
  Click Me
</button>
`;

exports[`Button Components TextButton should match snapshot with type submit 1`] = `
<button
  class="px-3 py-1.5 text-white text-xs font-semibold bg-slate-800 hover:bg-slate-700 active:bg-slate-900 disabled:bg-slate-400 rounded transition-all cursor-pointer undefined"
  type="submit"
>
  Submit Form
</button>
`;
